<resources>
    <string name="app_name">Calc - Basic</string>
    <string name="request">Request</string>
    <string name="answer">Answer</string>
    <string name="app_logo">App Logo</string>
    <string name="f_d"><![CDATA[F <> D]]></string>
    <string name="dms"><![CDATA[>DMS]]></string>
    <string name="r_pr"><![CDATA[R>Pr]]></string>
    <string name="r_p"><![CDATA[R>Pθ]]></string>
    <string name="p_ry"><![CDATA[P>Ry]]></string>
    <string name="p_rx"><![CDATA[P>Rx]]></string>
    <string name="degree">°</string>
    <string name="seconds">\"</string>
    <string name="x_1">x<sup>-1</sup></string>
    <string name="x_2">x<sup>2</sup></string>
    <string name="ten_x">10<sup>x</sup></string>
    <string name="e_x">e<sup>x</sup></string>
    <string name="x_sqrt"><sup>x</sup>√</string>
    <string name="a_b_c">A<sup>b/c</sup></string>
    <string name="parenthesis_syntax_error">Parenthesis Syntax Error</string>
    <string name="syntax_error">Syntax Error</string>
    <string name="nPr">nPr</string>

    <string name="ex">e<sup>x</sup></string>
    <string name="inverse_x">x<sup>⁻1</sup></string>
    <string name="inverse_sin">sin<sup>⁻1</sup></string>
    <string name="inverse_cos">cos<sup>⁻1</sup></string>
    <string name="inverse_tan">tan<sup>⁻1</sup></string>
    <string name="abcde">A<sup>b/c</sup> &lt; &gt; <sup>d/e</sup></string>
    <string name="abc">A<sup>b/c</sup></string>
    <string name="degree_radians">&#x00B0; \' \"</string>
    <string name="fd">F &lt; &gt; D</string>
    <string name="rp">R &lt; &gt; P</string>
    <string name="divide">\u00F7</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="enter_equals">ENTER</string>
    <string name="answer_txt">Answer</string>
    <string name="request_txt">Request</string>
    <string name="ins">INS</string>
    <string name="sqrt">\u221a</string>
    <string name="xsqrt"><sup>x</sup>\u221a</string>
    <string name="sci_eng">SCI/ENG</string>
    <string name="stat">STAT</string>
    <string name="probability">PROBABILITY</string>
    <string name="RAND">RAND</string>
    <string name="RANDI">RANDI</string>
    <string name="nCr">nCr</string>
    <string name="EP">!</string>
    <string name="drg_dialog">Set the Angle Mode to:\n \nDegrees (DEG)\nRadians (RAD)\nGradian (GRD)\n\n The \"default\" unit is Radians.\n\n1 Radian = 180/π Degrees\n1 Degree = 400/360 Gradians\n1 Gradian = π/200 Radian</string>
    <string name="prb_dialog">\nnPr : Calculate Permutations. \nn = Number of Outcomes \nr = Permutation Size\n\nnCr : Calculate Combinations.\nn = Number of Choices \nr = Number Chosen\n\n! : Calculate Factorials. \n\nRANDI: Generate random Integers. \nRAND: Generate random Doubles.</string>
    <string name="degree_symbol">°</string>
    <string name="minutes">\'</string>
    <string name="rpc_title">Rectangular / \nPolar Coordinates</string>
    <string name="rpc_body">\nTransform Coordinates. \nCheck \'Angle Mode\' first.\n\n(Cartesian)\nRectangular Coordinates (x,y)\nPolar Coordinates (r, θ)</string>
    <string name="x">X</string>
    <string name="rpc_graph">Rectangular and Polar Coordiate Graph</string>
    <string name="angle_mode">ANGLE MODE</string>
    <string name="deg">DEG</string>
    <string name="rad">RAD</string>
    <string name="grd">GRD</string>
    <string name="clrvar">CLRVAR</string>
    <string name="_2nd">2nd</string>
    <string name="rcl">RCL</string>


    <string name="k">K</string>
    <string name="prb">PRB</string>
    <string name="hyp">HYP</string>
    <string name="fix">FIX</string>
    <string name="angle_menu">Angle Menu</string>
    <string name="g">Ⓖ</string>
    <string name="r">ʀ</string>
    <string name="fse_body">\nFloat/Double (FLO)\n Ex. ####.####\n\nScientific (SCI)\nEx. 6.51 ✕ 10^8\n\nEngineering (ENG)\nEx. 350 ✕ 10^3</string>
    <string name="flo">FLO</string>
    <string name="sci">SCI</string>
    <string name="eng">ENG</string>
    <string name="decimal_notation">Decimal Notation</string>
    <string name="data">DATA</string>
    <string name="sto"><![CDATA[STO>]]></string>
    <string name="del">DEL</string>
    <string name="on">ON</string>
    <string name="drg">DRG</string>
    <string name="log">log</string>
    <string name="off">OFF</string>
    <string name="_0">0</string>
    <string name="mvar">MVAR</string>
    <string name="pi">pi</string>
    <string name="ans_a"><![CDATA[ANS > A]]></string>
    <string name="ans_b"><![CDATA[ANS > B]]></string>
    <string name="ans_c"><![CDATA[ANS > C]]></string>
    <string name="ans_d"><![CDATA[ANS > D]]></string>
    <string name="ans_f"><![CDATA[ANS > F]]></string>
    <string name="var1">1-VAR</string>
    <string name="var2">2-VAR</string>
    <string name="clear_stat_vars">CLEARDATA</string>
    <string name="stat_body">1-VAR:\n1 Data Set. Variable. ( X ).\n\n2-VAR:\n2 Data Sets. 2 Variables. \n( X, Y ) \n(Independent, Dependent)</string>
    <string name="statvar">STATVAR</string>
    <string name="clear">CLEAR</string>
    <string name="history_hint">START USING THE CALCULATOR.\n\nTHEN RETURN TO SEE YOUR INPUT AND ANSWER HISTORY</string>
    <string name="delete_history">Trash Can: Delete Your History!</string>
    <string name="reduce_font_size">Reduce Font Size</string>
    <string name="increase_font_size">Increase Font Size</string>
    <string name="exit_stat">EXIT STAT</string>
    <string name="stat_var_title">STATISTICS\nVARIABLES</string>
    <string name="n">n</string>
    <string name="slope_linear_regression">Slope - Linear Regression</string>
    <string name="a">a</string>
    <string name="sumX2">Σx<sup>2</sup></string>
    <string name="sumY2">Σy<sup>2</sup></string>
    <string name="sumX2TV">Sum of all x<sup>2</sup> coordinates / values</string>
    <string name="sumY2TV">Sum of all y<sup>2</sup> coordinates / values</string>
    <string name="sum_of_all_y_coordinates_values">Sum of all y coordinates / values</string>
    <string name="ln">ln</string>
    <string name="tips">TIPS</string>
    <string name="help">HELP</string>
    <string name="start">START</string>
    <string name="startMessage">\nMake good use of your new, digital, scientific calculator.\n\nPlease use ( ) to help define your orders of operations. Avoid relying on implied multiplication or implied addition.\n\nIf you experience any bugs or errors, please contact the developer before leaving a review for gratitude or clarification.\n</string>
    <string name="welcome">WELCOME</string>
    <string name="welcomeGraphicDescription">Welcome, pin-cushion style, fractal graphic.</string>
    <string name="tipsMessage"><![CDATA[Basic / Fundamental Operations:\n\n- Addition [ + ]\n- Subtraction [ - ]\n- Multiplication [ * ]\n- Division [ ÷ ]\n\nFractions/Decimals Function:\n\n- F <> D [ Fractions to Decimals ]\n- A b/c <> d/e [ Mix or Improper Fractions ] \n- % [ Percentage ]\n\nExponential Functions:\n\n- x^-1 [ Inverse Function ]\n- x^2 [ Squared Function ]\n- 10^x [ Powers of Ten ]\n- e^x [ E to the Powers of X ]\n- ^ [exponent function ]\n- log() [ logarithm ]\n- ln() [ natural logarithm ]\n- x√( [nth Root ]\n- √( [Square Root ]\n\nTrigonometric Functions:\n\n- sin() [ Sine ]\n- cos() [ Cosine ]\n- tan() [ Tangent ]\n- asin() [ Inverse Sine ]\n- acos() [ Inverse Cosine ]\n- atan() [ Inverse Tangent ]\n- pi\n\nCircle Arithmetic:\n\n- ° \' \" Button (Degrees, Minutes, Seconds)\n\nHyperbolic Functions:\n\n- HYP Button (Press 2nd [HYP]) then sin, cos, or tan for\n- sinh() [ Hyperbolic Sine ]\n- cosh() [ Hyperbolic Cosine ]\n- tanh() [ Hyperbolic Tangent ]\n- asinh() [ Inverse Hyperbolic Sine ]\n- acosh() [ Inverse Hyperbolic  Cosine ]\n- atanh() [ Inverse Hyperbolic Tangent ]\n\nFormatting:\n\n- DEL [ Delete ]\n- FIX [ Fixed Notation ]\n- EE [ Enter Exponent ]\n- , [ Coordinate Pair Input separator ]\n- SCI/ENG [Scientific or Engineering Notation ]\n\nMemory Functions:\n\n- K [ Constant ]\n- STO > [ Store Memory Variables ]\n- MEMVAR [ Memory Variables List ]\n- CLRVAR [ Clear Variables from memory ]\n- RESET [ Reset Calculator and stored data ]\n- A B C D E [ Memory Variables ]\n- ANS [ Answer Text / Variable ]\n\nProbability Functions:\n\n- PRB [ Probability ]\n- nPr [ Permutations ]\n- nCr [ Combinations ]\n- ! [ Factorial ]\n- RAND [ Random ]\n- RANDI [ Random Integer ]\n\nStatistics Functions:\n\n- Data Button [start data entry ]\n- STAT [ start stat mode ]\n- VARSTAT Button [ display various statistical analysis ]\n- EXIT STAT [ close stat mode ]\n- 1-VAR [ 1 variable statistics ]\n- 2-VAR [ 2 variable statistics ]\n- CLRDATA [ Clear Data ]\n\nUsage History Feature\n\nRectangular/Polar Coordinate Functions:\n\n- R<>P [ Rectangular or Polar Coordinate ]\n- R > Pr [ Rectangular to polar radius ]\n- R >Pθ [ Rectangular to polar θ ]\n- P > Rx [ polar to rectangular x-coordinate ]\n- P > Ry [ polar to rectangular y-coordinate ]\n\n- DRG [ Degrees, Radians, or Gradians ]]]></string>
    <string name="close">CLOSE</string>
    <string name="report">REPORT</string>
    <string name="begin">BEGIN</string>
    <string name="Calc">Calc</string>
    <string name="calculator">CALCULATOR</string>
    <string name="ee">EE</string>
    <string name="percent">%</string>
    <string name="comma">,</string>
    <string name="reset">RESET</string>
    <string name="ans">ANS</string>
    <string name="menu_title_add">Add</string>
    <string name="menu_title_history">History</string>
    <string name="menu_title_new">New</string>
    <string name="menu_title_clear">Clear</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_solve">Solve</string>
    <string name="x_neg1">x<sup>-1</sup></string>
    <string name="_10_x">10<sup>x</sup></string>
    <string name="eToX">e<sup>x</sup></string>
    <string name="xTo2">x<sup>2</sup></string>

</resources>

