<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/red_blue_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/clearHistory"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/delete_history"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/trash" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/font_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:contentDescription="@string/reduce_font_size"
                    android:paddingTop="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/font_min" />

                <ImageButton
                    android:id="@+id/font_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:contentDescription="@string/increase_font_size"
                    android:paddingTop="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/font_plus" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40dp"
                tools:ignore="ObsoleteLayoutParam,SpUsage" />
        </LinearLayout>

        <TextView
            android:id="@+id/historyBox"
            android:textIsSelectable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:hint="@string/history_hint"
            android:textColor="@color/white"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text=""
            android:textSize="11sp" />

    </RelativeLayout>

</ScrollView>