<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|bottom"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/request"
                android:textColor="#424242"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|bottom"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/answer"
                android:textColor="#424242"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/android" />

        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DFE0DF"
                android:padding="5dp"
                android:text=""
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#000"
                android:padding="5dp"
                android:text="OFF"
                android:gravity="center"
                android:textColor="#fff"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FD685B"
                android:padding="5dp"
                android:text="MEM"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FD685B"
                android:padding="5dp"
                android:text="MODE"
                android:textColor="#424242"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FD685B"
                android:padding="5dp"
                android:text="DEL"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FFF7E9"
                android:padding="5dp"
                android:text="CLR"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FD685B"
                android:padding="5dp"
                android:text="MORE"
                android:textColor="#424242"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="7"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="8"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="9"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00CD77"
                android:padding="5dp"
                android:text="÷"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FD685B"
                android:padding="5dp"
                android:text="("
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="4"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="5"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="6"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00CD77"
                android:padding="5dp"
                android:text="×"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FD685B"
                android:padding="5dp"
                android:text=")"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="1"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="2"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="3"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00CD77"
                android:padding="5dp"
                android:text="-"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#97ffd3"
                android:padding="5dp"
                android:text="="
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="0"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="."
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#FA980B"
                android:padding="5dp"
                android:text="( ⁻ )"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00CD77"
                android:padding="5dp"
                android:text="+"
                android:textColor="#424242"
                app:cornerRadius="0dp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>